feat: поправил код основного сервера